chore: Home page (Games icon) - Added spacing and fixed scrolling issue in board game tab

--- a/app/(home)/components/Main/components/MainContentList/components/ListSmallIcons/index.module.scss
+++ b/app/(home)/components/Main/components/MainContentList/components/ListSmallIcons/index.module.scss
@@ -13,6 +13,9 @@
   .rowsContainer {
     height: 100%;
     position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 
     .firstRow,
     .secondRow {
@@ -21,7 +24,7 @@
       align-items: center;
       gap: 0.15rem;
       width: auto;
-      height: 50%;
+      height: 48%;
       position: relative;
 
       .iconHolder {
